renamed snap to gaming-graphics-test to make it a bit more descriptive

--- a/snap/gui/vulkaninfo.desktop
+++ b/snap/gui/vulkaninfo.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=vulkaninfo
-Exec=graphics-demo.vulkaninfo
+Exec=gaming-graphics-test.vulkaninfo
 Type=Application
 Terminal=true
